# duckdb_warc

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  devenv.nix  test.sql
.github/workflows/: MainDistributionPipeline.yml  scheduled-1.4.yml  scheduled-1.5.yml
src/: lib.rs
test-data/: example.warc
