[package]
name = "warc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.4.2", features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "0.1.12"
libduckdb-sys = { version = "1.4.2", features = ["loadable-extension"] }
flate2 = "1.0"
warc = "0.4.0"
