[package]
name = "warc"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for parsing WARC (Web ARChive) records"
license = "MIT"
repository = "https://github.com/midwork-finds-jobs/duckdb_warc"
keywords = ["duckdb", "warc", "common-crawl", "web-archive"]
categories = ["database", "parser-implementations"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "1.4.2", features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "0.1.12"
libduckdb-sys = { version = "1.4.2", features = ["loadable-extension"] }
flate2 = "1.0"
warc = "0.4.0"
